# er-system

./: Makefile  README.md  pyproject.toml
docs/schema/: Address.md  Boolean.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Employment.md  EmploymentStatusEnum.md  Float.md  GenderEnum.md  Integer.md  Jsonpath.md  Jsonpointer.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  Person.md  Sparqlpath.md  String.md  Time.md  Uri.md  Uriorcurie.md  address.md  age.md  birth_date.md  city.md  employer.md  employment_history.md  end_date.md  full_name.md  gender.md  id.md  index.md  personinfo.md  postal_code.md  salary.md  start_date.md  status.md  (+2 more)
resources/schema/: ers-core_v0.01.yaml
src/adapters/: repository.py
src/models/: ers_core.py
