[project]
name = "er-system"
version = "0.0.1"
description = "A pluggable entity resolution system for data transformation pipelines"
authors = [
    { name = "meaningfy.ws", email = "hi@meaningfy.ws" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "opentelemetry-api (>=1.30.0,<2.0.0)",
    "opentelemetry-sdk (>=1.30.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.51b0,<0.52)",
    "pymongo (>=4.11.1,<5.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "tox>=4.24.1,<5.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "coverage>=7.6.12,<8.0.0",
    "pylint>=3.3.4,<4.0.0",
    "mongomock>=4.3.0,<5.0.0",
    "linkml>=1.9.2,<2.0.0"
]
